# racer

./: .gitignore  Makefile  README.md  TEST_AUDIT_REPORT.md  environment.yml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_rerun.py
environments/: base.yaml  dev.yaml  prod.yaml
src/backend/: compose_template.py  database.py  docker_manager.py  dockerfile_template.py  main.py  main_new.py  main_old.py  models.py  port_manager.py  project_validator.py  swarm_manager.py
src/client/: __init__.py  api.py  cli.py  cli_old.py  pyproject.toml  racer_cli.py  racerctl.py  setup.py
test-project/: Dockerfile  conda-lock.default.yml  conda-project.yml  docker-compose.yml  environment.yml  main.py  nginx.conf
tests/: README.md  conftest.py  run_tests.py  test_basic.py  test_coverage_report.py  test_db_utils.py  test_integration_simple.py
tests/integration/: test_api_endpoints.py  test_api_endpoints_comprehensive.py  test_cli_commands.py  test_cli_comprehensive.py  test_cli_help_commands.py  test_makefile_targets.py
tests/unit/: test_api_client.py  test_cli_commands.py  test_database.py  test_docker_manager.py  test_dockerfile_template.py  test_port_manager.py  test_project_validator.py  test_swarm_manager.py
